kustomize/dataplane/choreo-observability/loggingapi/loggingapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    checkov.io/skip1: CKV_K8S_38=The SA token is required for the linkerd to define service identity
  labels:
    choreo.component: loggingapi
  name: loggingapi
spec:
  replicas: 1
  selector:
    matchLabels:
      choreo.component: loggingapi
  strategy: { }
  template:
    metadata:
      labels:
        choreo.component: loggingapi
        antiaffinity: loggingapi
      annotations:
        linkerd.io/inject: enabled
        config.alpha.linkerd.io/proxy-wait-before-exit-seconds: "60"
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: loggingapi
          image: choreocontrolplane.azurecr.io/choreoipaas/choreo-logging-dp:latest
          securityContext:
            runAsUser: 10500
            runAsGroup: 10500
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          volumeMounts:
            - name: config
              mountPath: /home/ballerina/Config.toml
              subPath: Config.toml
            - name: loggingapi-secret
              mountPath: "/mnt/csi/loggingapi-secret"
              readOnly: true
            - name: opensearch-password
              mountPath: "/mnt/csi/opensearch-password"
              readOnly: true
          ports:
            - containerPort: 9097
              name: logapi-port
              protocol: TCP
            - containerPort: 9098      # To be used for readiness/liveness probes (internal)
              name: health
              protocol: TCP
          readinessProbe:
            initialDelaySeconds: 5
            timeoutSeconds: 60
            periodSeconds: 60
            failureThreshold: 3
            successThreshold: 1
            httpGet:
              port: health
              path: /readiness
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 15
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
            httpGet:
              port: health
              path: /liveness
          resources:
            limits:
              cpu: 500m
              memory: 768Mi
            requests:
              cpu: 300m
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: loggingapi-cm-file
        - name: loggingapi-secret
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: loggingapi-secret
            nodePublishSecretRef:
              name: csi-secret-store-azure
        - name: opensearch-password
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: opensearch-http-passwd
            nodePublishSecretRef:
              name: csi-secret-store-azure
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: antiaffinity
                    operator: In
                    values:
                      - loggingapi
              topologyKey: kubernetes.io/hostname
