kustomize/dataplane/choreo-observability/loggingapi/loggingapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    choreo.component: loggingapi
  name: choreo-loggingapi
spec:
  ports:
    - name: logapi-port
      port: 9097
      targetPort: logapi-port
  selector:
    choreo.component: loggingapi
